2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libchip/display/disp_hcms29xx.c: Do not make these static. They
	appear to be unused that way.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libchip/shmdr/shm_driver.h: Correct prototypes.

2008-08-19	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/display/disp_hcms29xx.c: Fixed warnings. Initialized
	variables and made methods static.

2008-08-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/serial/ns16550.c: Fix warning.

2008-08-18	Ralf Corsepius <ralf.corsepius@rtems.org>

	* aclocal/prog-cc.m4: Add -Wnested-externs.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/dec21140.c: Add missing prototype.
	* libchip/ide/ata.c, libchip/network/elnk.c: Add missing prototypes.

2008-08-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/prog-cc.m4: Add -Wimplicit-function-declaration 
	-Wstrict-prototypes to RTEMS_CFLAGS.

2008-08-02	Chris Johns <chrisj@rtems.org>

	* libchip/i2c/spi-sd-card.c, libchip/ide/ata.c: Remove
	rtems_blkdev_request count and start references. Use
	RTEMS_BLKDEV_START_BLOCK.

2008-07-29	Chris Johns <chrisj@rtems.org>

	* libchip/i2c/spi-sd-card.c: Updated to the libblock changes.

	* libchip/ide/ata.c: Change to use a mutex rather than disable
	pre-emption. Updated to the libblock changes.

	* libchip/ide/ata_internal.h: Updated to the new chains API.

	* libchip/ide/ide_controller.c: Updated to the libblock
	changes. Added come debug tracing.

	* libchip/ide/ide_ctrl_cfg.h, libchip/ide/ide_ctrl_io.h: Updated
	to the libblock changes.

2008-07-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RPCGEN, RPCTOOLS.

2008-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/i2c/spi-sd-card.h, libchip/i2c/spi-sd-card.c: Use inttypes.h
	for output format specifiers.

2008-07-17	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>
